<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        layout="@layout/toolbar"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/dimen_20">
  <!--  <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_contactus"
        android:textAllCaps="true"
        android:textColor="#7e009f"
        android:gravity="center"
        android:textSize="20sp"/>-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_address"
        android:textColor="#7e009f"
        android:gravity="center"
        android:textSize="14sp"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:textSize="13sp"
        android:textColor="#7e009f"
        android:gravity="center"
        android:text="@string/text_email_id"/>

    <TextView
        android:id="@+id/call"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:textSize="13sp"
        android:textColor="#7e009f"
        android:gravity="center"
        android:text="@string/text_mobile"/>

    <TextView
        android:id="@+id/website"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:textSize="13sp"
        android:textColor="#351ECD"
        android:gravity="center"
        android:text="@string/text_weblink"/>
    </LinearLayout>
</LinearLayout>