<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <include
        layout="@layout/toolbar"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/dimen_20">

    <!--<TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="About Us:"
        android:textAllCaps="true"
        android:textColor="#7e009f"
        android:gravity="center"
        android:layout_marginTop="@dimen/dimen_20"
        android:textSize="@dimen/dimen_20"/>-->
    <TextView
        android:id="@+id/textweblink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#7e009f"
        android:gravity="center"
        android:textSize="15sp"
        android:layout_marginTop="10dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Ramesh Khachi"
        android:textColor="#000000"
        android:gravity="center"
        android:layout_marginTop="@dimen/dimen_20"
        android:textSize="15sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textColor="#5d5d5d"
        android:gravity="center"
        android:text="@string/text_about_first"/>
 <TextView
     android:id="@+id/myrecord"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:gravity="center"
        android:layout_marginTop="@dimen/dimen_20"
        android:textSize="15sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textColor="#5d5d5d"
        android:gravity="center"
        android:text="@string/text_about_second"/>

    <TextView
        android:id="@+id/international"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:textSize="15sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textColor="#5d5d5d"
        android:gravity="center"
        android:text="@string/text_about_third"/>
<TextView
    android:id="@+id/inational"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:gravity="center"
        android:layout_marginTop="@dimen/dimen_20"
        android:textSize="15sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textColor="#5d5d5d"
        android:gravity="center"
        android:text="@string/text_about_fourth"/>

    <TextView
        android:id="@+id/text_books"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bookspublis"
        android:textColor="#000000"
        android:gravity="center"
        android:layout_marginTop="@dimen/dimen_20"
        android:textSize="15sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textColor="#5d5d5d"
        android:gravity="center"
        android:text="@string/text_about_fifth"/>
    <TextView
        android:id="@+id/text_apps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:gravity="center"
        android:layout_marginTop="@dimen/dimen_20"
        android:textSize="15sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textColor="#5d5d5d"
        android:gravity="center"
        android:text="@string/text_about_sixth"/>

        </LinearLayout>
</ScrollView>
</LinearLayout>